# Lego-Sorter

./: .gitignore  CMakeLists.txt  ProposalResponse.md  README.md
resources/: broad_overview_of_code.txt  hardware.txt  infrastructure.txt  lego categories.txt  mygroup.txt  stuff to code.txt  useful references.txt
source/: CMake Quickstart.txt  CMakeLists.txt  driver.c
source/block-detector/: CMakeLists.txt  block-detector.c  block_detector.c  opencv-sobel.cpp  opencv-sobel.h
source/block-identifier/: CMakeLists.txt
source/block-in-image/: CMakeLists.txt  main.c
source/camera/: CMakeLists.txt  camera.c  source - Shortcut.lnk
source/classifier/: CMakeLists.txt  LED.py  block_detector.c  block_recognizer.c  colour_detector.c  image.c  lego_colours.h  opencv-sobel.h  pngimport.cpp  sobel-filter.c  tensorflow-model.cpp  tensorflow-model.h
source/classify-block/: CMakeLists.txt  main.c
source/colour-detector/: CMakeLists.txt  block_detector.c  colour_detector.c  lego_colours.h  temp.c
source/driver/: CMakeLists.txt  LED.py  driver.c
source/include/: CMakeLists.txt  block_detector.h  block_recognizer.h  camera.h  colour.h  colour_detector.h  image.h  pngimport.h  set_management.h  tensorflow-model.h
source/include/tensorflow/c/: c_api.h
source/png-import/: CMakeLists.txt  pngimport.cpp
source/set_management/: CMakeLists.txt  set_stuff  set_stuff.c  user_input
source/tf-interface/: CMakeLists.txt  tf-interface.c
tensorflow_code+pics/: README.md
tensorflow_code+pics/tf_files/bottlenecks/other/: img_0037.jpg_mobilenet_0.50_224.txt  img_0118.jpg_mobilenet_0.50_224.txt  img_0121.jpg_mobilenet_0.50_224.txt  img_0341.jpg_mobilenet_0.50_224.txt  img_0345.jpg_mobilenet_0.50_224.txt  img_0522.jpg_mobilenet_0.50_224.txt  img_0768.jpg_mobilenet_0.50_224.txt  img_0769.jpg_mobilenet_0.50_224.txt  img_0802.jpg_mobilenet_0.50_224.txt  img_0808.jpg_mobilenet_0.50_224.txt  img_0989.jpg_mobilenet_0.50_224.txt  img_0991.jpg_mobilenet_0.50_224.txt  img_1157.jpg_mobilenet_0.50_224.txt  img_1190.jpg_mobilenet_0.50_224.txt  img_1214.jpg_mobilenet_0.50_224.txt  img_1290.jpg_mobilenet_0.50_224.txt  img_1472.jpg_mobilenet_0.50_224.txt  img_1692.jpg_mobilenet_0.50_224.txt  img_1710.jpg_mobilenet_0.50_224.txt  img_1716.jpg_mobilenet_0.50_224.txt  img_1764.jpg_mobilenet_0.50_224.txt  img_1841.jpg_mobilenet_0.50_224.txt  img_1849.jpg_mobilenet_0.50_224.txt  img_1872.jpg_mobilenet_0.50_224.txt  img_1877.jpg_mobilenet_0.50_224.txt  img_2235.jpg_mobilenet_0.50_224.txt  img_2236.jpg_mobilenet_0.50_224.txt  img_2644.jpg_mobilenet_0.50_224.txt  img_2807.jpg_mobilenet_0.50_224.txt  img_3076.jpg_mobilenet_0.50_224.txt  img_3082.jpg_mobilenet_0.50_224.txt  img_3090.jpg_mobilenet_0.50_224.txt  img_3094.jpg_mobilenet_0.50_224.txt  img_3106.jpg_mobilenet_0.50_224.txt
tensorflow_code+pics/tf_files/bottlenecks/rectangular_2x2/: img_0049.jpg_mobilenet_0.50_224.txt  img_0073.jpg_mobilenet_0.50_224.txt  img_0081.jpg_mobilenet_0.50_224.txt  img_0083.jpg_mobilenet_0.50_224.txt  img_0089.jpg_mobilenet_0.50_224.txt  img_0095.jpg_mobilenet_0.50_224.txt  img_0097.jpg_mobilenet_0.50_224.txt  img_0098.jpg_mobilenet_0.50_224.txt  img_0100.jpg_mobilenet_0.50_224.txt  img_0106.jpg_mobilenet_0.50_224.txt  img_0108.jpg_mobilenet_0.50_224.txt  img_0112.jpg_mobilenet_0.50_224.txt  img_0138.jpg_mobilenet_0.50_224.txt  img_0163.jpg_mobilenet_0.50_224.txt  img_0176.jpg_mobilenet_0.50_224.txt  img_0177.jpg_mobilenet_0.50_224.txt  img_0198.jpg_mobilenet_0.50_224.txt  img_0202.jpg_mobilenet_0.50_224.txt  img_0212.jpg_mobilenet_0.50_224.txt  img_0258.jpg_mobilenet_0.50_224.txt  img_0271.jpg_mobilenet_0.50_224.txt  img_0274.jpg_mobilenet_0.50_224.txt  img_0281.jpg_mobilenet_0.50_224.txt  img_0285.jpg_mobilenet_0.50_224.txt  img_0286.jpg_mobilenet_0.50_224.txt  img_0287.jpg_mobilenet_0.50_224.txt  img_0300.jpg_mobilenet_0.50_224.txt  img_0301.jpg_mobilenet_0.50_224.txt  img_0302.jpg_mobilenet_0.50_224.txt  img_0307.jpg_mobilenet_0.50_224.txt  img_0312.jpg_mobilenet_0.50_224.txt  img_0314.jpg_mobilenet_0.50_224.txt  img_0339.jpg_mobilenet_0.50_224.txt  img_0353.jpg_mobilenet_0.50_224.txt  img_0363.jpg_mobilenet_0.50_224.txt  img_0390.jpg_mobilenet_0.50_224.txt  img_0398.jpg_mobilenet_0.50_224.txt  img_0416.jpg_mobilenet_0.50_224.txt  img_0449.jpg_mobilenet_0.50_224.txt  img_0475.jpg_mobilenet_0.50_224.txt  (+14 more)
tensorflow_code+pics/tf_files/bottlenecks/rectangular_2x3/: img_0539.jpg_mobilenet_0.50_224.txt  img_0560.jpg_mobilenet_0.50_224.txt  img_0574.jpg_mobilenet_0.50_224.txt  img_0577.jpg_mobilenet_0.50_224.txt  img_0581.jpg_mobilenet_0.50_224.txt  img_0587.jpg_mobilenet_0.50_224.txt  img_0594.jpg_mobilenet_0.50_224.txt  img_0596.jpg_mobilenet_0.50_224.txt  img_0618.jpg_mobilenet_0.50_224.txt  img_0623.jpg_mobilenet_0.50_224.txt  img_0652.jpg_mobilenet_0.50_224.txt  img_0669.jpg_mobilenet_0.50_224.txt  img_0674.jpg_mobilenet_0.50_224.txt  img_0693.jpg_mobilenet_0.50_224.txt  img_0717.jpg_mobilenet_0.50_224.txt  img_0722.jpg_mobilenet_0.50_224.txt  img_0734.jpg_mobilenet_0.50_224.txt  img_0738.jpg_mobilenet_0.50_224.txt  img_0741.jpg_mobilenet_0.50_224.txt  img_0742.jpg_mobilenet_0.50_224.txt  img_0745.jpg_mobilenet_0.50_224.txt  img_0749.jpg_mobilenet_0.50_224.txt  img_0752.jpg_mobilenet_0.50_224.txt  img_0758.jpg_mobilenet_0.50_224.txt  img_0774.jpg_mobilenet_0.50_224.txt  img_0819.jpg_mobilenet_0.50_224.txt  img_0831.jpg_mobilenet_0.50_224.txt  img_0836.jpg_mobilenet_0.50_224.txt  img_0838.jpg_mobilenet_0.50_224.txt  img_0852.jpg_mobilenet_0.50_224.txt  img_0875.jpg_mobilenet_0.50_224.txt  img_0880.jpg_mobilenet_0.50_224.txt  img_0886.jpg_mobilenet_0.50_224.txt  (+32 more)
tensorflow_color_detector/: README.md  run.bat  train
tensorflow_color_detector/tf_files/: retrained_labels.txt
tensorflow_detect_block/: README.md  run.bat  train
tensorflow_detect_block/tf_files/: retrained_labels.txt
tensorflow_detect_block/tf_files/log/: events.out.tfevents.1511315736.ZEUS
tensorflow_type_detector/: README.md  _grayscale.py  _grayscale_rotate.py  run.bat  train
tensorflow_type_detector/tf_files/: retrained_labels.txt
(+15808 files in other folders)
